--- a/korter_project.qrc
+++ b/korter_project.qrc
@@ -6,5 +6,6 @@
         <file>pics/grid.jpg</file>
         <file>pics/primordial_soup.png</file>
         <file>pics/time.jpg</file>
+        <file>pics/brachypodium_fac_slim.jpg</file>
     </qresource>
 </RCC>
