--- a/korter_project_qt_fitness_widget.ui
+++ b/korter_project_qt_fitness_widget.ui
@@ -61,8 +61,11 @@
    </item>
    <item row="2" column="1">
     <widget class="QDoubleSpinBox" name="box_unfac_opt">
+     <property name="decimals">
+      <number>3</number>
+     </property>
      <property name="singleStep">
-      <double>0.100000000000000</double>
+      <double>0.010000000000000</double>
      </property>
      <property name="value">
       <double>0.100000000000000</double>
@@ -84,8 +87,14 @@
    </item>
    <item row="1" column="1">
     <widget class="QDoubleSpinBox" name="box_fac_opt">
+     <property name="decimals">
+      <number>3</number>
+     </property>
+     <property name="maximum">
+      <double>100.000000000000000</double>
+     </property>
      <property name="singleStep">
-      <double>0.100000000000000</double>
+      <double>0.010000000000000</double>
      </property>
      <property name="value">
       <double>0.500000000000000</double>
@@ -148,16 +157,6 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="3">
-    <widget class="QwtPlot" name="fitness_plot" native="true">
-     <property name="minimumSize">
-      <size>
-       <width>50</width>
-       <height>200</height>
-      </size>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="3">
     <widget class="QLabel" name="label">
      <property name="sizePolicy">
@@ -175,10 +174,46 @@
     </widget>
    </item>
    <item row="1" column="3">
-    <widget class="QDoubleSpinBox" name="box_fac_max"/>
+    <widget class="QDoubleSpinBox" name="box_fac_max">
+     <property name="decimals">
+      <number>3</number>
+     </property>
+     <property name="maximum">
+      <double>100.000000000000000</double>
+     </property>
+     <property name="singleStep">
+      <double>0.010000000000000</double>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
+     </property>
+    </widget>
    </item>
    <item row="2" column="3">
-    <widget class="QDoubleSpinBox" name="box_unfac_max"/>
+    <widget class="QDoubleSpinBox" name="box_unfac_max">
+     <property name="decimals">
+      <number>3</number>
+     </property>
+     <property name="maximum">
+      <double>100.000000000000000</double>
+     </property>
+     <property name="singleStep">
+      <double>0.001000000000000</double>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="4">
+    <widget class="QwtPlot" name="fitness_plot" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>50</width>
+       <height>200</height>
+      </size>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
