--- a/korter_project_qt_parameters_widget.ui
+++ b/korter_project_qt_parameters_widget.ui
@@ -42,7 +42,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>4</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="page_spatial_plot">
       <property name="geometry">
@@ -219,7 +219,7 @@
         <x>0</x>
         <y>0</y>
         <width>411</width>
-        <height>532</height>
+        <height>535</height>
        </rect>
       </property>
       <attribute name="label">
@@ -233,7 +233,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -246,7 +246,7 @@
          </property>
         </spacer>
        </item>
-       <item row="4" column="0" colspan="2">
+       <item row="5" column="0" colspan="2">
         <widget class="QLabel" name="image_biology">
          <property name="text">
           <string/>
@@ -286,14 +286,14 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="3" column="0">
         <widget class="QLabel" name="label_mut_stddev">
          <property name="text">
           <string>Mutation stddev</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="QDoubleSpinBox" name="box_mut_stddev">
          <property name="decimals">
           <number>4</number>
@@ -306,6 +306,20 @@
          </property>
          <property name="value">
           <double>0.010000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_percentage_facilitated">
+         <property name="text">
+          <string>% facilitated</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLabel" name="label_percentage_facilitated_value">
+         <property name="text">
+          <string>100%</string>
          </property>
         </widget>
        </item>
