Use smaller menu picture

--- a/korter_project.qrc
+++ b/korter_project.qrc
@@ -3,6 +3,7 @@
         <file>pics/brachypodium_fac.jpg</file>
         <file>pics/brachypodium.jpg</file>
         <file>pics/site.jpg</file>
+        <file>pics/site_50.jpg</file>
         <file>pics/grid.jpg</file>
         <file>pics/primordial_soup.png</file>
         <file>pics/time.jpg</file>
