--- a/korter_project_qt_parameters_widget.ui
+++ b/korter_project_qt_parameters_widget.ui
@@ -42,15 +42,15 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="page_spatial_plot">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>400</width>
-        <height>546</height>
+        <width>406</width>
+        <height>536</height>
        </rect>
       </property>
       <attribute name="label">
@@ -130,22 +130,31 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>400</width>
-        <height>546</height>
+        <width>406</width>
+        <height>536</height>
        </rect>
       </property>
       <attribute name="label">
        <string>Initial conditions</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_8">
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_initial_seagrass_concentration">
-         <property name="text">
-          <string>RNG seed</string>
+       <item row="5" column="1">
+        <widget class="QSpinBox" name="box_rng_seed"/>
+       </item>
+       <item row="0" column="1">
+        <widget class="QDoubleSpinBox" name="box_init_trait_mean">
+         <property name="toolTip">
+          <string>The desired initial mean value of the trait under selection</string>
+         </property>
+         <property name="singleStep">
+          <double>0.010000000000000</double>
+         </property>
+         <property name="value">
+          <double>1.000000000000000</double>
          </property>
         </widget>
        </item>
-       <item row="6" column="0" colspan="2">
+       <item row="8" column="0" colspan="2">
         <widget class="QLabel" name="image_initial_conditions">
          <property name="text">
           <string/>
@@ -158,10 +167,46 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
-        <widget class="QSpinBox" name="box_rng_seed"/>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label">
+         <property name="toolTip">
+          <string>The desired initial mean value of the neutral marker; the trait not under selection</string>
+         </property>
+         <property name="text">
+          <string>Initial neutral mean</string>
+         </property>
+        </widget>
        </item>
-       <item row="5" column="0">
+       <item row="1" column="1">
+        <widget class="QDoubleSpinBox" name="box_init_trait_stddev">
+         <property name="toolTip">
+          <string>The desired initial standard deviation of the trait under selection</string>
+         </property>
+         <property name="decimals">
+          <number>3</number>
+         </property>
+         <property name="minimum">
+          <double>0.001000000000000</double>
+         </property>
+         <property name="singleStep">
+          <double>0.001000000000000</double>
+         </property>
+         <property name="value">
+          <double>0.100000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_init_trait_mean">
+         <property name="toolTip">
+          <string>The desired initial mean value of the trait under selection</string>
+         </property>
+         <property name="text">
+          <string>Initial trait mean</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -174,34 +219,62 @@
          </property>
         </spacer>
        </item>
+       <item row="5" column="0">
+        <widget class="QLabel" name="label_initial_seagrass_concentration">
+         <property name="text">
+          <string>RNG seed</string>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_init_trait_stddev">
+         <property name="toolTip">
+          <string>The desired initial standard deviation of the trait under selection</string>
+         </property>
          <property name="text">
           <string>Initial trait stddev</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_init_trait_mean">
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="toolTip">
+          <string>The desired initial standard deviation of the neutral marker; the trait not under selection</string>
+         </property>
          <property name="text">
-          <string>Initial trait mean</string>
+          <string>Initial neutral stddev</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QDoubleSpinBox" name="box_init_trait_mean">
+       <item row="2" column="1">
+        <widget class="QDoubleSpinBox" name="doubleSpinBox">
+         <property name="toolTip">
+          <string>The desired initial mean value of the neutral marker; the trait not under selection</string>
+         </property>
+         <property name="decimals">
+          <number>3</number>
+         </property>
+         <property name="minimum">
+          <double>-100.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>100.000000000000000</double>
+         </property>
          <property name="singleStep">
           <double>0.010000000000000</double>
          </property>
-         <property name="value">
-          <double>1.000000000000000</double>
-         </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QDoubleSpinBox" name="box_init_trait_stddev">
+       <item row="4" column="1">
+        <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
+         <property name="toolTip">
+          <string>The desired initial standard deviation of the neutral marker; the trait not under selection</string>
+         </property>
          <property name="decimals">
           <number>3</number>
+         </property>
+         <property name="minimum">
+          <double>0.001000000000000</double>
          </property>
          <property name="singleStep">
           <double>0.001000000000000</double>
@@ -218,8 +291,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>411</width>
-        <height>535</height>
+        <width>405</width>
+        <height>544</height>
        </rect>
       </property>
       <attribute name="label">
@@ -330,8 +403,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>400</width>
-        <height>546</height>
+        <width>406</width>
+        <height>536</height>
        </rect>
       </property>
       <attribute name="label">
@@ -344,8 +417,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>400</width>
-        <height>546</height>
+        <width>406</width>
+        <height>536</height>
        </rect>
       </property>
       <attribute name="label">
